Fix text and picture alignment for horizontal orientation

--- a/playbook/app/pb_kits/playbook/pb_empty_state/_empty_state.scss
+++ b/playbook/app/pb_kits/playbook/pb_empty_state/_empty_state.scss
@@ -15,15 +15,24 @@
   .sm-state-horizontal {
     width: max-content;
     max-width: 400px;
+    .pb_flex_item_kit {
+      align-self: end;
+    }
   }
 
   .md-state-horizontal {
     width: max-content;
     max-width: 600px;
+    .pb_flex_item_kit {
+      align-self: end;
+    }
   }
 
   .lg-state-horizontal {
     width: max-content;
+    .pb_flex_item_kit {
+      align-self: end;
+    }
   }
 
 }
